syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/pule1234/simple_bank/pb";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

message RenewAccessTokenRequest {
    string RefreshToken = 1;
}

message RenewAccessTokenResponse {
    string AccessToken = 1;
    google.protobuf.Timestamp AccessTokenExpireAt = 2;
}